# basic-file-encryption-decryption

./: README.md  pyproject.toml
encryption_ui/: __init__.py
encryption_ui/qt-designer/: interface.ui
